--- a/frontend.html
+++ b/frontend.html
@@ -38,13 +38,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
+      Front End Developer (Javascript/React) - Wallet.Services
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qXWaVfwI&k=Job&j=oIIrbfwM&__jvst=Employee+Referral&__jvsd=sP0W7gwD&__jvsc=Twitter&bid=n404nMwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qXWaVfwI&k=Job&j=oIIrbfwM&__jvst=Employee+Referral&__jvsd=sP0W7gwD&__jvsc=Twitter&bid=n404nMwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -106,7 +112,7 @@
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=o5Pfbfw4&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nzNxnMwx'>Egnyte Careers - Senior Frontend Engineer - Protect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=o5Pfbfw4&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nzNxnMwx'>Egnyte Careers - Senior Frontend Engineer - Protect</a></h5> 
 <p><span class="badge badge-light">Mountain View, California  Mountain View, California  Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -117,6 +123,23 @@
 <h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396618-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 18, 2019 ... As a Senior Software Engineer- Front End, your guidance and input drive 
+architecture and functionality decisions. Whether you prefer providing mentorship 
+to?...</p>
+<hr/>
+<h5><a href='https://opensignal-limited.workable.com/jobs/1155891/candidates/new'>Frontend Engineer - Opensignal</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... Who are Opensignal?Opensignal, a mobile analytics company, is the global 
+standard for measuring real-world mobile network experience. Using billions of?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/monese/j/2CB32139FA/'>Front-End Engineer - Monese</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... About MoneseAt Monese we are on a mission to give people the financial 
+freedom to thrive anywhere. We are building a banking service that allows you to
+?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
@@ -170,7 +193,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/polarr/03597d84-a719-4a61-aef4-82b435d8df3d'>Polarr - Senior Frontend Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/polarr/03597d84-a719-4a61-aef4-82b435d8df3d'>Polarr - Senior Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -186,11 +209,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/tLKc3hkCgB/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<h5><a href='http://vodastra.applytojob.com/apply/tLKc3hkCgB/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC  Charlotte</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -232,7 +255,7 @@
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -256,7 +279,7 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/465376-senior-frontend-engineer-react-js-redux'>Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN</a></h5> 
+<h5><a href='https://join.join.com/jobs/465376-senior-frontend-engineer-react-js-redux'>Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -288,7 +311,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -304,11 +327,11 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324371/front-end-web-developer'>Front-end Web Developer | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324371/front-end-web-developer'>Front-end Web Developer | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://worknola.com/job/324368/front-end-developer'>Front-end developer | WorkNOLA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324368/front-end-developer'>Front-end developer | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -316,7 +339,7 @@
 <p><span class="badge badge-light">St Julian's, Malta</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://mymusictaste.applytojob.com/apply/RoVZfJse8c/Frontend-Engineer'>Frontend Engineer - MyMusicTaste - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mymusictaste.applytojob.com/apply/RoVZfJse8c/Frontend-Engineer'>Frontend Engineer - MyMusicTaste - Career Page</a></h5> 
 <p><span class="badge badge-light">Seoul, Korea, Republic of</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -438,22 +461,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698243417-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241287-frontend-software-engineer'>Netcentric Frontend Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698243183-frontend-software-engineer'>Netcentric Frontend Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Bucharest, Romania</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241803-frontend-developer-junior-mid-'>Netcentric Frontend Developer (Junior-Mid) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241986-senior-frontend-developer-m-f-x-'>Netcentric Senior Frontend Developer (m/f/x) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
